docs: comprehensive README update — accurate repo URL, full project structure tree, 4 transformation modes guide, advanced configuration table, wildcard guide, dynamic attach manual, and interactive web dashboard showcase